# github-bootstrap

./: .github-project.example.yaml  .github-project.yaml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPMENT-GUIDE.md  ROADMAP.md  SPECIFICATION-REFERENCE.md  TECHNICAL-GUIDE.md  USER-GUIDE.md
docs/architecture/: vertical-slice.md
src/github_bootstrap/: __main__.py  cli.py
src/github_bootstrap/application/: synchronization_service.py
src/github_bootstrap/executor/: __init__.py  context.py  executor.py  fields.py  issues.py  labels.py  milestones.py  projects.py  registry.py
src/github_bootstrap/github/: client.py  exceptions.py  field_state.py  fields.py  github_state.py  issue_state.py  issues.py  label_state.py  labels.py  milestone_state.py  milestones.py  models.py  project_item_state.py  project_items.py  projects.py  repositories.py  state.py
src/github_bootstrap/planner/: __init__.py  actions.py  fields.py  issues.py  labels.py  milestones.py  plan.py  projects.py
src/github_bootstrap/specification/: __init__.py  loader.py  models.py  parser.py  validator.py
src/github_bootstrap/web/: __init__.py  app.py  routes.py
src/github_bootstrap/web/static/: styles.css
src/github_bootstrap/web/templates/: index.html  login.html
tests/: test_executor_fields.py  test_executor_issues.py  test_executor_labels.py  test_executor_milestones.py  test_field_state.py  test_github_client.py  test_github_fields.py  test_github_milestones.py  test_github_models.py  test_milestone_state.py  test_parser.py  test_plan.py  test_planner_fields.py  test_planner_labels.py  test_planner_milestones.py  test_project_items.py  test_specification.py  test_specification_models.py  test_version.py
tests/application/: test_synchronization_service.py
