[project]
name = "github-bootstrap"
version = "0.1.0"
description = "Bootstrap GitHub Projects V2 from declarative YAML specifications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
github-bootstrap = "github_bootstrap.cli:app"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
explicit_package_bases = true
mypy_path = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
